# cj

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/cj-bench/: Cargo.toml
crates/cj-bench/benches/: parsers.rs
crates/cj-bench/src/: lib.rs
crates/cj-cli/: Cargo.toml
crates/cj-cli/src/: args.rs  completions.rs  magic.rs  main.rs  meta.rs  output.rs  streaming.rs
crates/cj-cli/tests/: integration.rs
crates/cj-core/: Cargo.toml
crates/cj-core/src/: error.rs  lib.rs  registry.rs  traits.rs  types.rs
crates/cj-parsers/: Cargo.toml
crates/cj-parsers/src/: dummy.rs  lib.rs  universal.rs
crates/cj-parsers/src/disk/: blkid.rs  findmnt.rs  lsblk.rs  mdadm.rs  mod.rs  sfdisk.rs  swapon.rs  tune2fs.rs
crates/cj-parsers/src/format/: csv.rs  csv_s.rs  ini.rs  ini_dup.rs  kv.rs  kv_dup.rs  mod.rs  plist.rs  toml.rs  xml.rs  yaml.rs
crates/cj-parsers/src/log/: cef.rs  cef_s.rs  clf.rs  clf_s.rs  git_log.rs  git_log_s.rs  git_ls_remote.rs  mod.rs  syslog.rs  syslog_bsd.rs  syslog_bsd_s.rs  syslog_s.rs
crates/cj-parsers/src/misc/: airport.rs  airport_s.rs  amixer.rs  asciitable.rs  asciitable_m.rs  bluetoothctl.rs  cbt.rs  crontab.rs  crontab_u.rs  dir.rs  dmidecode.rs  find.rs  finger.rs  fstab.rs  group.rs  gshadow.rs  hciconfig.rs  hosts.rs  ipconfig.rs  jar_manifest.rs  m3u.rs  mod.rs  net_localgroup.rs  net_user.rs  nsd_control.rs  ntpq.rs  os_release.rs  passwd.rs  pci_ids.rs  pgpass.rs  resolve_conf.rs  shadow.rs  srt.rs  ssh_conf.rs  sshd_conf.rs  veracrypt.rs  who.rs  xrandr.rs  zipinfo.rs  zpool_iostat.rs  (+1 more)
crates/cj-parsers/src/network/: arp.rs  curl_head.rs  dig.rs  ethtool.rs  host.rs  http_headers.rs  ifconfig.rs  iftop.rs  ip_address.rs  ip_route.rs  iw_scan.rs  iwconfig.rs  mod.rs  netstat.rs  nmcli.rs  ping.rs  ping_s.rs  route.rs  route_print.rs  rsync.rs  rsync_s.rs  ss.rs  tests.rs  tracepath.rs  traceroute.rs  traceroute_s.rs
crates/cj-parsers/src/package/: apt_cache_show.rs  apt_get_sqq.rs  debconf_show.rs  dpkg_l.rs  mod.rs  pacman.rs  pip_list.rs  pip_show.rs  pkg_index_apk.rs  pkg_index_deb.rs  postconf.rs  rpm_qi.rs
crates/cj-parsers/src/proc/: mod.rs  proc_buddyinfo.rs  proc_cmdline.rs  proc_consoles.rs  proc_cpuinfo.rs  proc_crypto.rs  proc_devices.rs  proc_diskstats.rs  proc_dispatch.rs  proc_driver_rtc.rs  proc_filesystems.rs  proc_interrupts.rs  proc_iomem.rs  proc_ioports.rs  proc_loadavg.rs  proc_locks.rs  proc_meminfo.rs  proc_modules.rs  proc_mtrr.rs  proc_net_arp.rs  proc_net_dev.rs  proc_net_dev_mcast.rs  proc_net_if_inet6.rs  proc_net_igmp.rs  proc_net_igmp6.rs  proc_net_ipv6_route.rs  proc_net_netlink.rs  proc_net_netstat.rs  proc_net_packet.rs  proc_net_protocols.rs  proc_net_route.rs  proc_net_tcp.rs  proc_net_unix.rs  proc_pagetypeinfo.rs  proc_partitions.rs  proc_pid_fdinfo.rs  proc_pid_io.rs  proc_pid_maps.rs  proc_pid_mountinfo.rs  proc_pid_numa_maps.rs  (+13 more)
crates/cj-parsers/src/security/: certbot.rs  cksum.rs  der.rs  gpg.rs  hashsum.rs  iptables.rs  mod.rs  openvpn.rs  ufw.rs  ufw_appinfo.rs  wg_show.rs  x509_cert.rs  x509_crl.rs  x509_csr.rs
crates/cj-parsers/src/string/: datetime_iso.rs  email_address.rs  jwt.rs  mod.rs  path.rs  path_list.rs  semver.rs  timestamp.rs  url.rs
crates/cj-parsers/src/system/: acpi.rs  chage.rs  date.rs  df.rs  du.rs  efibootmgr.rs  env.rs  file.rs  free.rs  hash.rs  history.rs  id.rs  iostat.rs  iostat_s.rs  jobs.rs  last.rs  ls.rs  ls_s.rs  lsattr.rs  lsb_release.rs  lsmod.rs  lsof.rs  lspci.rs  lsusb.rs  mod.rs  mount.rs  mpstat.rs  mpstat_s.rs  needrestart.rs  os_prober.rs  pidstat.rs  pidstat_s.rs  ps.rs  stat.rs  stat_s.rs  sysctl.rs  systemctl.rs  systemctl_lj.rs  systemctl_ls.rs  systemctl_luf.rs  (+17 more)
crates/cj-utils/: Cargo.toml
crates/cj-utils/src/: convert.rs  lib.rs  line_slice.rs  normalize.rs  table.rs  timestamp.rs
docs/: api-contracts.md
tests/: cross_validate.py  cross_validation_report.md
tests/fixtures/aix-7.1/: arp-a.json
tests/fixtures/centos-7.7/: arp-a.json  arp-v.json  dig-aaaa.json  dig-axfr.json  dig-x.json  dig.json  findmnt-a.json  findmnt-l.json  ifconfig.json  iw-scan0.json  last-crash.json  last-w.json  last-wF.json  last-wixF.json  last.json  lastb.json  ls-R-newlines.json  ls-R.json  ls-al.json  ls-alR.json  ls-glob.json  ls-newlines.json  ls.json  lsblk-allcols.json  lsblk.json  lsmod.json  lsof-sudo.json  lsof.json  lsusb-v-single.json  lsusb-v.json  lsusb.json  mount.json  netstat-i.json  netstat-l.json  netstat-p.json  netstat-r.json  netstat-rne.json  netstat-rnee.json  netstat-sudo-aeep.json  netstat-sudo-lnp.json  (+47 more)
tests/fixtures/centos-8/: arp-a.json
tests/fixtures/debian10/: crontab-u.json
tests/fixtures/debian13/: who.json  who.out
tests/fixtures/fedora32/: last.json  netstat.json  ping-hostname-O-D-p-s.json  ping-hostname-O-p.json  ping-hostname-O.json  ping-ip-O-D.json  ping-ip-O.json  ping6-hostname-O-D-p-s.json  ping6-hostname-O-D-p.json  ping6-hostname-O-p.json  ping6-ip-O-D-p.json  ping6-ip-O-p.json
tests/fixtures/freebsd12/: last.json  netstat-Aa.json  netstat-AaT.json  netstat-AanP.json  netstat-Aax.json  netstat-aT.json  netstat-an.json  netstat-i.json  netstat-ib.json  netstat-r.json  ping-hostname-p.json  ping-hostname-s.json  ping-hostname.json  ping-ip-p.json  ping-ip-s.json  ping-ip.json  stat.json  traceroute-streaming.json  traceroute.json  traceroute6-streaming.json  traceroute6.json
tests/fixtures/generic/: bluetoothctl_controller.json  bluetoothctl_controller_2.json  bluetoothctl_controller_with_manufacturer.json  bluetoothctl_device.json  bluetoothctl_device_random.json  bluetoothctl_device_with_battery.json  cef.json  certbot-account.json  certbot-certs.json  crontab-no-normal-entries.json  crontab-u-no-normal-entries.json  crontab-u-var-fix.json  crontab-var-fix.json  curl_head--ILvs-cnn-com.json  curl_head--ILvs-example-com.json  curl_head--ILvs-facebook-com.json  curl_head--ILvs-google-com.json  curl_head--ILvs-microsoft-com.json  curl_head--ILvs-yahoo-com.json  date-after-midnight.json  date-before-midnight.json  date.json  dig-additional.json  dig-edns.json  (+123 more)
(+140 files in other folders)
