[workspace]
members = [
    "crates/cj-core",
    "crates/cj-utils",
    "crates/cj-parsers",
    "crates/cj-cli",
    "crates/cj-bench",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/zhongweili/cj"
homepage = "https://github.com/zhongweili/cj"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
inventory = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
