[package]
name = "cj-bench"
version.workspace = true
edition.workspace = true
description = "Benchmarks for cj parsers"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cj-utils = { path = "../cj-utils" }
cj-parsers = { path = "../cj-parsers" }
cj-core = { path = "../cj-core" }
criterion = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "parsers"
harness = false
