[package]
name = "cj-core"
version.workspace = true
edition.workspace = true
description = "Core types, parser registry, and traits for cj"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["json", "parser", "registry"]
categories = ["encoding", "data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
inventory = { workspace = true }
